Fixed Spacing

--- a/style_sheet.css
+++ b/style_sheet.css
@@ -66,6 +66,7 @@ h1 {
 	margin: auto;
 	margin-top: 20;
 	margin-bottom: 20;
+	text-align: center;
 }
 
 p, a, h1, h2, h3, h4, h5, h6, tr {
